--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "echarts": "^4.0.4",
     "plotly.js": "^1.35.2",
     "vue": "^2.5.2",
+    "vue-button": "^0.1.0",
     "vue-canvas-gauges": "0.0.0",
     "vue-echarts-v3": "^1.0.19",
     "vue-grid-layout": "^2.1.12",
+    "vue-js-modal": "^1.3.13",
     "vue-router": "^3.0.1",
     "vue-widgets-layout": "^1.2.2"
   },
