--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-echarts-v3": "^1.0.19",
     "vue-grid-layout": "^2.1.12",
     "vue-js-modal": "^1.3.13",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vue-widgets-layout": "^1.2.2"
   },
