--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-grid-layout": "^2.1.12",
     "vue-js-modal": "^1.3.13",
     "vue-material": "^1.0.0-beta-10.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-widgets-layout": "^1.2.2"
   },
